Bug 1815621 - Make `Selection::NotifySelectionListeners` check concrete class listeners too when it wants to return early r=smaug

In bug 1486370, bug 1487591 and bug 1487659, we made `Selection` handle some
selection listeners with pointers to concrete classes for the performance (for
saving virtual call cost, allocation cost of the selection listener array and
copy cost of the array before notifying).  However, at that time, I forgot to
change the condition of early return.   Therefore, current `Selection` does not
notify concrete class listeners of selection changes if there is no active
`nsISelectionListener` instances for the `Selection` instance.

Differential Revision: https://phabricator.services.mozilla.com/D169191